--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
     <div class="container">
 
 <div class="fretboard_instance">
+<pre class="asciiFret v4 noNut" data-title="4 frets, no nut">
+ x    x 
+ ||||o| 
+ ||o||| 
+ |o|o|| 
+ |||||| 
+        
+</pre>
+</div> <!-- end: .fretboard_instance -->
+
+<div class="fretboard_instance">
 <pre class="asciiFret v4" data-title="vertical, 4 frets">
    ^^   
  |||||| 
