--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <li>Ukulele scale diagrams (horizontal fretboard, various sizes)</li>
     </ol>
 
-<div style="width:616px">
+<div style="">
 <div class="fretboard_instance">
 <pre class="asciiFret h5 noNut" data-title="horizontal, 5 frets">
        
