Fixes the horiz screwup

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <li>Ukulele scale diagrams (horizontal fretboard, various sizes)</li>
     </ol>
 
-<div style="">
+<div style="width:336px; margin: 0 auto;">
 <div class="fretboard_instance">
 <pre class="asciiFret h5 noNut" data-title="horizontal, 5 frets">
        
@@ -41,7 +41,7 @@
  -o-o- 
        
 </pre>
-</div> <!-- end: .fretboard_instance -->
+</div>
 </div>
 
     <div class="container">
