--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <ol>
       <li><strike>Guitar chord diagrams (vertical fretboard, various sizes)</strike></li>
       <li>Ukulele chord diagrams (vertical fretboard, various sizes)</li>
-      <li>Guitar scale diagrams (horizontal fretboard, various sizes)</li>
+      <li><strike>Guitar scale diagrams (horizontal fretboard, various sizes)</strike></li>
       <li>Ukulele scale diagrams (horizontal fretboard, various sizes)</li>
     </ol>
 
