--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       	<rect x="102" y="72" width="368" height="20"/>
       </g>
     </svg>
-    <div class="cells">
+    <div class="">
       <svg version="1.1"  xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 72 88" enable-background="new 0 0 72 88" xml:space="preserve">
           <circle class="fretb_dot" fill="#27AAE1" cx="36" cy="44" r="32"/>
        </svg>
